# axioner-deploy

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: deployments.md
docs/superpowers/plans/: 2026-05-04-remote-ai-deploy-implementation.md  PHASE1_DONE.txt
docs/superpowers/specs/: 2026-05-04-remote-ai-deploy-design.md
scripts/: _install_pubkey.py  deploy.py  local-bootstrap.ps1  preflight.py  server-bootstrap.sh
scripts/lib/: conflict_detector.py  plan_io.py  server_state.py  ssh_client.py
templates/nginx/: site.conf
templates/project/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.node  Dockerfile.python  README.md  docker-compose.yml
